--- a/HMP.ipynb
+++ b/HMP.ipynb
@@ -96,7 +96,7 @@
       "source": [
         "import parmed as pmd\n",
         "from parmed import tools\n",
-        "amber = pmd.load_file('/content/solvated.prmtop', '/content/solvated.inpcrd')\n",
+        "amber = pmd.load_file('/content/solvated.parm7', '/content/solvated.rst7')\n",
         "pmd.tools.actions.HMassRepartition(amber)\n",
         "amber.save('gromacs.top')\n",
         "amber.save('gromacs.gro')"
